src/golden/systemtests/errors/test.golden/garbage.st
System test files are structured scripts.  You can't just start writing code

	c = 14